added paperwork section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 
 /*--------------------------------------------------*/
 @import 'page-main/hero';
+@import 'page-main/paperwork';
 
 @import 'components/footer';
 
