--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -53,8 +53,15 @@ body {
   @extend %gilroy-900;
   font-size: 40px;
   line-height: 1.27; /* 51/40 */
+  &--secondary {
+    font-size: 36px;
+    text-align: center;
+  }
   @media (max-width:$tablet){
     font-size: 32px;
+    &--secondary {
+      font-size: 28px;
+    }
   }
 }
 
@@ -133,6 +140,7 @@ body {
     left: 0;
     width: 16px;
     background-color: #86AFEF;
+    transition: background-color 0.3s;
   }
 
   @media (max-width:$mobile) {
@@ -200,3 +208,4 @@ body {
     }
   }
 }
+
