--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,21 @@
   top: 0;
   left: 0;
   z-index: 3;
+  &::before {
+    @extend %pseudo;
+    width: 100%;
+    height: 100%;
+    left: -120%;
+    background-color: $bg;
+    z-index: 3;
+    transition: left 0.3s;
+  }
+  &.header-open {
+    &::before {
+      left: 0;
+    }
+  }
+
 
   // .header__inner
   &__inner {
