--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -226,6 +226,14 @@
         }
       }
     }
+
+    &--whatsapp,
+    &--viber,
+    &--telegram {
+      &:active {
+        box-shadow: none;
+      }
+    }
   }
 }
 
