--- a/src/scss/page-main/_hero.scss
+++ b/src/scss/page-main/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  overflow: hidden;
   background-color: $bg-hero;
  
   // .hero__inner
@@ -42,6 +43,7 @@
       }
     }
   }
+
 
   &__content {
     max-width: 675px;
