--- a/src/html/components/_header.html
+++ b/src/html/components/_header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header--@@page">
   <div class="header__top top-header">
     <div class="container">
       <div class="top-header__inner">
