--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,14 +4,18 @@
   height: auto;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 13;
+  &--secondary {
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.15);
+    background: $bg-secondary;
+  }
   &::before {
     @extend %pseudo;
     width: 100%;
     height: 100%;
     left: -120%;
     background-color: $bg;
-    z-index: 3;
+    z-index: 13;
     transition: left 0.3s;
   }
   &.header-open {
@@ -38,7 +42,7 @@
   &__bottom {}
 
   &__hidden-menu {
-    z-index: 2;
+    z-index: 12;
     display: none;
 
     @media (max-width: 1070px) {
@@ -68,7 +72,7 @@
   // background-color: $bg;s
   padding: 20px 0;
   position: relative;
-  z-index: 10;
+  z-index: 20;
   @media (max-width:$mobile){
     padding: 10px 0;
   }
@@ -122,7 +126,7 @@
     @media (max-width:650px){
       margin-bottom: 25px;
       color: $bg;
-      z-index: 4;
+      z-index: 14;
       &::before {
         display: none;  
       }
@@ -135,7 +139,7 @@
     @media (max-width: 1070px){
       order: 2;
       position: relative;
-      z-index: 4;
+      z-index: 14;
       margin-top: auto;
     }
   }
@@ -431,7 +435,7 @@
     width: 100%;
     height: 100%;
     transition: left 0.3s;
-    z-index: 3;
+    z-index: 13;
     padding: 110px 0 0 0;
     overflow-y: auto;
     overflow-x: hidden;
