--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 
 /*-------------Страница электробезопасности------------------------------------------------*/
 @import 'page-certification/electrical-safety';
+@import 'page-certification/certificate';
 
 /*--------------------------------------------------*/
 @import 'components/footer';
