--- a/src/html/components/_guarantees.html
+++ b/src/html/components/_guarantees.html
@@ -1,4 +1,4 @@
-<section class="guarantees">
+<section class="guarantees @@guarantees-padding-bottom">
   <div class="container">
     <div class="guarantees__inner">
       <h2 class="guarantees__title title title--secondary @@visible">Какие гарантии вы получаете?</h2>
