--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -83,9 +83,12 @@ body {
       } 
     }
     @media (max-width:$mobile){
-       &:nth-child(2) {
+      //  &:nth-child(2) {
+      //   display: none;
+      //  } 
+      &--certification {
         display: none;
-       } 
+      }
     }
   }
   // .breadcrumbs__link
