--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,9 @@
 @import 'page-certification/electrical-safety';
 @import 'page-certification/certificate';
 
+/*-------------Страница новостей------------------------------------------------*/
+@import 'page-news/blog-news';
+
 /*--------------------------------------------------*/
 @import 'components/footer';
 
