--- a/src/html/components/_footer.html
+++ b/src/html/components/_footer.html
@@ -68,7 +68,7 @@
             <a class="social-footer__phone phone phone--footer state" href="tel:88000000000">8 800 000-00-00</a>
             <a class="social-footer__email email email--footer state" href="mailto:email@email.com">email@email.com</a>
           </div>
-          <button class="social-footer__btn btn btn--footer">Обратный звонок</button>
+          <button class="social-footer__btn btn btn--footer state">Обратный звонок</button>
           <div class="social-footer__logo">
             <a class="logo" href="#">
               <svg width="147" height="50" viewBox="0 0 136 39" fill="none" xmlns="http://www.w3.org/2000/svg">
