--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,9 @@
 /*-------------Страница новостей------------------------------------------------*/
 @import 'page-news/blog-news';
 
+/*-------------Страница контактов------------------------------------------------*/
+@import 'page-contacts/contacts';
+
 /*--------------------------------------------------*/
 @import 'components/footer';
 
