--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -174,6 +174,102 @@ body {
 
 }
 
+.social {
+  display: flex;
+  column-gap: 18px;
+  @media (max-width: 1070px){
+    align-self: center;
+  }
+
+  // .social-header__item
+  &__item {
+    width: 43px;
+    height: 43px;
+  }
+
+  // .social-header__link
+  &__link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      width: 19px;
+      height: 19px;
+      path {
+        fill: $bg;
+      }
+    }
+
+    &::before {
+      // @extend %pseudo-xy;
+      // @extend %svg-color;
+      // width: 19px;
+      // height: 19px;
+      // background-color: $bg;
+    }
+
+    &--whatsapp {
+      background-color: #2dd038;
+      box-shadow: 0 8px 25px 0 rgba(45, 208, 56, 0.5);
+
+      // &::before {
+      //   -webkit-mask-image: url('../img/icons.svg#whatsapp-icon');
+      //   mask-image: url('../img/icons.svg#whatsapp-icon');
+      // }
+      @media (any-hover: hover){
+        &:hover{
+          box-shadow: 0 8px 25px 0 rgba(45, 208, 56, 0.8);
+        }
+      }
+    }
+
+    &--viber {
+      background-color: #7b519d;
+      box-shadow: 0 8px 25px 0 rgba(123, 81, 157, 0.5);
+
+      // &::before {
+      //   -webkit-mask-image: url('../img/icons.svg#viber-icon');
+      //   mask-image: url('../img/icons.svg#viber-icon');
+      // }
+      @media (any-hover: hover){
+        &:hover{
+          box-shadow: 0 8px 25px 0 rgba(123, 81, 157, 0.8);
+        }
+      }
+    }
+
+    &--telegram {
+      background-color: #5bbaf0;
+      box-shadow: 0 8px 25px 0 rgba(91, 186, 240, 0.5);
+
+      // &::before {
+      //   width: 16px;
+      //   height: 14px;
+      //   -webkit-mask-image: url('../img/icons.svg#telegram-icon');
+      //   mask-image: url('../img/icons.svg#telegram-icon');
+      // }
+      @media (any-hover: hover){
+        &:hover{
+          box-shadow: 0 8px 25px 0 rgba(91, 186, 240, 0.8);
+        }
+      }
+    }
+
+    &--whatsapp,
+    &--viber,
+    &--telegram {
+      &:active {
+        box-shadow: none;
+      }
+    }
+  }
+}
+
 .btn {
   display: inline-block;
   border-radius: 3px;
@@ -238,9 +334,13 @@ body {
   width: 100%;
   height: 46px;
   padding: 0 15px;
+  transition: box-shadow 0.3s;
   &::placeholder {
     font-size: 14px;
     color: #7b7b7b;
+  }
+  &:focus {
+    box-shadow: 0 0 0 2px rgb(53, 53, 242);
   }
 }
 
