--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -82,9 +82,6 @@
     align-items: center;
     justify-content: space-between;
     column-gap: 15px;
-    @media (max-width:$mobileSmall){
-       
-    }
   }
 
   // .top-header__logo
@@ -92,12 +89,15 @@
     display: flex;
     align-items: center;
     column-gap: 55px;
+    .logo {
+      flex: 0 0 136px;
+    }
     @media (max-width:$mobile){
+      .logo {
+        flex: 0 0 100px;
+      }
        justify-content: space-between; 
        column-gap: 30px;
-    }
-    .logo {
-      
     }
   }
 
@@ -155,101 +155,6 @@
   &__icon {}
 }
 
-.social-header {
-  display: flex;
-  column-gap: 18px;
-  @media (max-width: 1070px){
-    align-self: center;
-  }
-
-  // .social-header__item
-  &__item {
-    width: 43px;
-    height: 43px;
-  }
-
-  // .social-header__link
-  &__link {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    svg {
-      width: 19px;
-      height: 19px;
-      path {
-        fill: $bg;
-      }
-    }
-
-    &::before {
-      // @extend %pseudo-xy;
-      // @extend %svg-color;
-      // width: 19px;
-      // height: 19px;
-      // background-color: $bg;
-    }
-
-    &--whatsapp {
-      background-color: #2dd038;
-      box-shadow: 0 8px 25px 0 rgba(45, 208, 56, 0.5);
-
-      // &::before {
-      //   -webkit-mask-image: url('../img/icons.svg#whatsapp-icon');
-      //   mask-image: url('../img/icons.svg#whatsapp-icon');
-      // }
-      @media (any-hover: hover){
-        &:hover{
-          box-shadow: 0 8px 25px 0 rgba(45, 208, 56, 0.8);
-        }
-      }
-    }
-
-    &--viber {
-      background-color: #7b519d;
-      box-shadow: 0 8px 25px 0 rgba(123, 81, 157, 0.5);
-
-      // &::before {
-      //   -webkit-mask-image: url('../img/icons.svg#viber-icon');
-      //   mask-image: url('../img/icons.svg#viber-icon');
-      // }
-      @media (any-hover: hover){
-        &:hover{
-          box-shadow: 0 8px 25px 0 rgba(123, 81, 157, 0.8);
-        }
-      }
-    }
-
-    &--telegram {
-      background-color: #5bbaf0;
-      box-shadow: 0 8px 25px 0 rgba(91, 186, 240, 0.5);
-
-      // &::before {
-      //   width: 16px;
-      //   height: 14px;
-      //   -webkit-mask-image: url('../img/icons.svg#telegram-icon');
-      //   mask-image: url('../img/icons.svg#telegram-icon');
-      // }
-      @media (any-hover: hover){
-        &:hover{
-          box-shadow: 0 8px 25px 0 rgba(91, 186, 240, 0.8);
-        }
-      }
-    }
-
-    &--whatsapp,
-    &--viber,
-    &--telegram {
-      &:active {
-        box-shadow: none;
-      }
-    }
-  }
-}
 
 .contacts-header {
   display: flex;
