--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   position: absolute;
   width: 100%;
+  min-width: 375px;
   height: auto;
   top: 0;
   left: 0;
@@ -93,11 +94,11 @@
       flex: 0 0 136px;
     }
     @media (max-width:$mobile){
+      justify-content: space-between; 
+      column-gap: 30px;
       .logo {
         flex: 0 0 100px;
       }
-       justify-content: space-between; 
-       column-gap: 30px;
     }
   }
 
@@ -269,29 +270,76 @@
 
   // .bottom-header__item
   &__item {
+    
     &--submenu {
-      @media (max-width: $mobile){
+      .bottom-header__link {
         position: relative;
+        padding-right: 25px;
         &::before {
           content: '';
           position: absolute;
-          pointer-events: none;
-          flex-direction: column;
+          background-color: $main;
+          width: 17px;
+          height: 17px;
+          top: 50%;
+          right: 0;
+          transform: translateY(-50%) rotate(90deg);
           -webkit-mask-size: cover;
           mask-size: cover;
           -webkit-mask-position: center;
           mask-position: center;
           -webkit-mask-repeat: no-repeat;
           mask-repeat: no-repeat;
-          right: 15px;
-          top: 50%;
-          transform: translateY(-50%);
-          width: 17px;
-          height: 17px;
           -webkit-mask-image: url('../img/icons.svg#check-icon');
           mask-image: url('../img/icons.svg#check-icon');
-          background-color: $bg;
+          transition: background-color 0.3s;
         }
+        &--active {
+          &::before {
+            transform: translateY(-50%) rotate(90deg) scaleX(-1);
+            background-color: $accent;
+          }
+        }
+        @media (max-width: 1070px){
+          &::before {
+            background-color: $bg;
+            transform: translateY(-50%) rotate(0deg);
+          }
+        }
+        @media (max-width:$mobile){
+          &::before {
+            right: 15px;
+          }
+        }
+        @media (any-hover: hover){
+          &:hover{
+            &::before {
+              background-color: $accent;
+            }
+          }
+        }
+      }
+      @media (max-width: $mobile){
+        // &::before {
+        //   content: '';
+        //   position: absolute;
+        //   pointer-events: none;
+        //   flex-direction: column;
+        //   -webkit-mask-size: cover;
+        //   mask-size: cover;
+        //   -webkit-mask-position: center;
+        //   mask-position: center;
+        //   -webkit-mask-repeat: no-repeat;
+        //   mask-repeat: no-repeat;
+        //   right: 15px;
+        //   top: 50%;
+        //   transform: translateY(-50%);
+        //   width: 17px;
+        //   height: 17px;
+        //   -webkit-mask-image: url('../img/icons.svg#check-icon');
+        //   mask-image: url('../img/icons.svg#check-icon');
+        //   background-color: $bg;
+        // }
       }
     }
   }
@@ -363,6 +411,7 @@
       margin-bottom: 20px;
       position: relative;
       padding-left: 25px;
+      transition: color 0.3s;
       &::before {
         content: '';
         position: absolute;
@@ -381,6 +430,7 @@
         -webkit-mask-image: url('../img/icons.svg#arrow-icon');
         mask-image: url('../img/icons.svg#arrow-icon');
         background-color: $bg;
+        transition: background-color 0.3s;
       }
     }
     @media (max-width:$mobile){
@@ -394,6 +444,14 @@
       transition: background-color 0.3s;
       &::before {
         left: 15px;
+      }
+    }
+    @media (any-hover: hover){
+      &:hover{
+        color: $accent;
+        &::before {
+          background-color: $accent;
+        }
       }
     }
   }
