--- a/src/scss/page-main/_hero.scss
+++ b/src/scss/page-main/_hero.scss
@@ -60,8 +60,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
     z-index: 2;
+    position: relative;
+    // background-image: url('../img/hero/group.png');
+    @media(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      background-image: url('../img/hero/group@2x.png');
+    }
     @media (max-width: $mobile){
       background-position: top;
       position: absolute;
@@ -102,5 +106,10 @@
   // .hero__btn
   &__btn {}
 }
-.btn--accent {
+
+@media(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .hero__decor {
+    background-image: url('../img/hero/group@2x.png');
+  }
 }
+
